<resources>
    <string name="app_name" translatable="false">Tasks</string>
    <string name="users">Users</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="nothing_found">Nothing found</string>
    <string name="error_occurred">Error occurred</string>
    <string name="retry">Retry</string>
    <string name="search_by_name_surname_email">Search by name, surname and email</string>
    <string name="error_no_internet">You are not connected to the internet</string>
    <string name="error_server">Server Error (Code: %d)</string>
    <string name="user_details">User Details</string>
    <string name="mention_user_format" translatable="false">\@%1$s</string>
    <string name="email_format">Email: %s</string>
    <string name="phone_number_format">Phone number: %s</string>
    <string name="website_format">Website: %s</string>
    <string name="business_sphere_format">Business Sphere: %s</string>
    <string name="city_format">City: %s</string>
    <string name="street_format">Street: %s</string>
    <string name="suite_format">Suite: %s</string>
    <string name="zipcode_format">Zipcode: %s</string>
    <string name="guillemets_format" translatable="false">«%s»</string>
    <string name="no_browser_error">There is no browser to open the link</string>
    <string name="no_apps_to_make_phone_call_error">There is no apps to make phone call</string>
    <string name="no_mail_app_error">There is no app for sending mail</string>
    <string name="contacts">Contacts</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="show_tasks">Show tasks</string>
    <string name="all">All</string>
    <string name="in_progress">In progress</string>
    <string name="done">Done</string>
    <string name="server_format">Server: %b</string>
    <string name="tasks">Tasks</string>
</resources>